trying to fix mobile cutoff v7

--- a/styles.css
+++ b/styles.css
@@ -546,7 +546,6 @@ html, body { /*done*/
         margin: 0;
         padding: 0;
         border-radius: 0;
-        margin-bottom: 75px;
         height: 100vh; 
     }
 
